<resources>
    <string name="app_name">ACT4_Android-Studio-Inicial</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Tu resultado</string>
    <string name="recalculate">Recalcular</string>
    <string name="error">Error</string>
    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estas por debajo de tu peso y altura</string>
    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estas en tu peso y altura</string>
    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estas por encima de tu peso y altura</string>
    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estas muy por encima de tu peso y altura</string>

</resources>